// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcDropdownSearch filtering should display custom no results message if no item matches 1`] = `
<li
  class="ec-dropdown-search__no-items"
  data-test="ec-dropdown-search__no-items"
  title="No custom items have been found"
>
  No custom items have been found
</li>
`;

exports[`EcDropdownSearch filtering should display custom no results slot if no item matches 1`] = `
<li
  class="my-slot"
>
  <div>
    Random message - No custom items have been found
  </div>
</li>
`;

exports[`EcDropdownSearch filtering should display no results message if no item matches 1`] = `
<li
  class="ec-dropdown-search__no-items"
  data-test="ec-dropdown-search__no-items"
  title="No results found"
>
  No results found
</li>
`;

exports[`EcDropdownSearch should add a tooltip for any disabled item 1`] = `
<ul
  class="ec-dropdown-search__item-list"
  data-test="ec-dropdown-search__item-list"
>
  <li
    class="ec-dropdown-search__search-area"
    data-test="ec-dropdown-search__search-area"
  >
    <svg
      class="ec-dropdown-search__search-icon ec-icon"
    >
      <use
        xlink:href="#ec-simple-search"
      />
    </svg>
     
    <input
      autocomplete="off"
      class="ec-dropdown-search__search-input"
      data-test="ec-dropdown-search__search-input"
      placeholder="Search..."
    />
  </li>
   
  <!---->
   
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--0"
    title="Item 1"
  >
    Item 1
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--1"
    title="Item 2"
  >
    Item 2
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--2"
    title="Item 3"
  >
    Item 3
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--3"
    mocked-tooltip-content="Random text"
    mocked-tooltip-placement="right"
    title="Item 4"
  >
    Item 4
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--4"
    title="Item 5"
  >
    Item 5
  </li>
</ul>
`;

exports[`EcDropdownSearch should disable the popover when disabled is set 1`] = `
<ecpopover-stub
  class="ec-dropdown-search__trigger"
  data-test="ec-popover-dropdown-search"
  disabled="true"
  level=""
  offset="8"
  placement="bottom"
  popoverarrowclass=""
  popoverclass=""
  popoverinnerclass="ec-dropdown-search__popover"
  popperoptions="[object Object]"
>
   
  <div>
    <ul
      class="ec-dropdown-search__item-list"
      data-test="ec-dropdown-search__item-list"
    >
      <li
        class="ec-dropdown-search__search-area"
        data-test="ec-dropdown-search__search-area"
      >
        <svg
          class="ec-dropdown-search__search-icon ec-icon"
        >
          <use
            xlink:href="#ec-simple-search"
          />
        </svg>
         
        <input
          autocomplete="off"
          class="ec-dropdown-search__search-input"
          data-test="ec-dropdown-search__search-input"
          placeholder="Search..."
        />
      </li>
       
      <!---->
       
      <li
        class="ec-dropdown-search__no-items"
        data-test="ec-dropdown-search__no-items"
        title="No results found"
      >
        No results found
      </li>
    </ul>
  </div>
</ecpopover-stub>
`;

exports[`EcDropdownSearch should merge given popoverOptions 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -3,12 +3,12 @@
  >
    <ecpopover-stub
      class=\\"ec-dropdown-search__trigger\\"
      data-test=\\"ec-popover-dropdown-search\\"
      level=\\"\\"
-     offset=\\"8\\"
-     placement=\\"bottom\\"
+     offset=\\"16\\"
+     placement=\\"top\\"
      popoverarrowclass=\\"\\"
      popoverclass=\\"\\"
      popoverinnerclass=\\"ec-dropdown-search__popover\\"
      popperoptions=\\"[object Object]\\"
    >"
`;

exports[`EcDropdownSearch should merge given tooltipOptions and item.tooltip prop 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -41,12 +41,12 @@
          <!---->
           
          <li
            class=\\"ec-dropdown-search__item ec-dropdown-search__item--is-disabled\\"
            data-test=\\"ec-dropdown-search__item ec-dropdown-search__item--0\\"
-           mocked-tooltip-content=\\"This reason should not be seen because it's overridden by tooltip.content.\\"
-           mocked-tooltip-placement=\\"right\\"
+           mocked-tooltip-content=\\"Content overridden by item\\"
+           mocked-tooltip-placement=\\"top\\"
            title=\\"Random Item\\"
          >
            Random Item
          </li>
        </ul>"
`;

exports[`EcDropdownSearch should not render the search if isSearchEnabled is set to false 1`] = `undefined`;

exports[`EcDropdownSearch should not select disabled item 1`] = `undefined`;

exports[`EcDropdownSearch should not select disabled item 2`] = `undefined`;

exports[`EcDropdownSearch should not show the items when the loading is set to true 1`] = `
<div
  class="ec-dropdown-search"
>
  <ecpopover-stub
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search"
    level=""
    offset="8"
    placement="bottom"
    popoverarrowclass=""
    popoverclass=""
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-dropdown-search__search-icon ec-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
           
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
         
        <!---->
         
        <li>
          <div
            class="ec-loading"
            data-test="ec-loading"
          >
            <div
              class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
              data-test="ec-loading__backdrop"
            >
              <svg
                class="ec-loading__icon ec-icon"
                data-test="ec-loading__icon"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-simple-loading"
                />
              </svg>
            </div>
             
            <div
              class="ec-loading__content ec-loading__content--is-transparent"
              data-test="ec-loading__content"
            >
              <div
                class="ec-dropdown-search__loading"
                data-test="ec-dropdown-search__loading"
              />
            </div>
          </div>
        </li>
      </ul>
    </div>
  </ecpopover-stub>
</div>
`;

exports[`EcDropdownSearch should pass information whether an item is selected to the item slot 1`] = `
<div
  class="ec-dropdown-search"
>
  <ecpopover-stub
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search"
    level=""
    offset="8"
    placement="bottom"
    popoverarrowclass=""
    popoverclass=""
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-dropdown-search__search-icon ec-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
           
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
         
        <!---->
         
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--0"
          title="Item 1"
        >
          <div>
            0 - 
          </div>
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--1"
          title="Item 2"
        >
          <div>
            1 - 
          </div>
        </li>
        <li
          class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--2"
          title="Item 3"
        >
          <div>
            2 - 
          </div>
        </li>
        <li
          class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--3"
          mocked-tooltip-content="Random text"
          mocked-tooltip-placement="right"
          title="Item 4"
        >
          <div>
            3 - 
          </div>
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--4"
          title="Item 5"
        >
          <div>
            4 - 
          </div>
        </li>
      </ul>
    </div>
  </ecpopover-stub>
</div>
`;

exports[`EcDropdownSearch should render all given items 1`] = `
<ul
  class="ec-dropdown-search__item-list"
  data-test="ec-dropdown-search__item-list"
>
  <li
    class="ec-dropdown-search__search-area"
    data-test="ec-dropdown-search__search-area"
  >
    <svg
      class="ec-dropdown-search__search-icon ec-icon"
    >
      <use
        xlink:href="#ec-simple-search"
      />
    </svg>
     
    <input
      autocomplete="off"
      class="ec-dropdown-search__search-input"
      data-test="ec-dropdown-search__search-input"
      placeholder="Search..."
    />
  </li>
   
  <!---->
   
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--0"
    title="Item 1"
  >
    Item 1
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--1"
    title="Item 2"
  >
    Item 2
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--2"
    title="Item 3"
  >
    Item 3
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--3"
    mocked-tooltip-content="Random text"
    mocked-tooltip-placement="right"
    title="Item 4"
  >
    Item 4
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--4"
    title="Item 5"
  >
    Item 5
  </li>
</ul>
`;

exports[`EcDropdownSearch should render as expected 1`] = `
<div
  class="ec-dropdown-search"
>
  <ecpopover-stub
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search"
    level=""
    offset="8"
    placement="bottom"
    popoverarrowclass=""
    popoverclass=""
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-dropdown-search__search-icon ec-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
           
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
         
        <!---->
         
        <li
          class="ec-dropdown-search__no-items"
          data-test="ec-dropdown-search__no-items"
          title="No results found"
        >
          No results found
        </li>
      </ul>
    </div>
  </ecpopover-stub>
</div>
`;

exports[`EcDropdownSearch should render given cta slot 1`] = `
<div
  class="ec-dropdown-search"
>
  <ecpopover-stub
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search"
    level=""
    offset="8"
    placement="bottom"
    popoverarrowclass=""
    popoverclass=""
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-dropdown-search__search-icon ec-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
           
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
         
        <li
          class="ec-dropdown-search__cta-area"
          data-test="ec-dropdown-search__cta-area"
        >
          <button>
            My CTA
          </button>
        </li>
         
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--0"
          title="Item 1"
        >
          Item 1
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--1"
          title="Item 2"
        >
          Item 2
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--2"
          title="Item 3"
        >
          Item 3
        </li>
        <li
          class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--3"
          mocked-tooltip-content="Random text"
          mocked-tooltip-placement="right"
          title="Item 4"
        >
          Item 4
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--4"
          title="Item 5"
        >
          Item 5
        </li>
      </ul>
    </div>
  </ecpopover-stub>
</div>
`;

exports[`EcDropdownSearch should render given default slot 1`] = `
<div
  class="ec-dropdown-search"
>
  <ecpopover-stub
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search"
    level=""
    offset="8"
    placement="bottom"
    popoverarrowclass=""
    popoverclass=""
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
    <a
      href="#"
    >
      Open me
    </a>
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-dropdown-search__search-icon ec-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
           
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
         
        <!---->
         
        <li
          class="ec-dropdown-search__no-items"
          data-test="ec-dropdown-search__no-items"
          title="No results found"
        >
          No results found
        </li>
      </ul>
    </div>
  </ecpopover-stub>
</div>
`;

exports[`EcDropdownSearch should render given item slot 1`] = `
<div
  class="ec-dropdown-search"
>
  <ecpopover-stub
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search"
    level=""
    offset="8"
    placement="bottom"
    popoverarrowclass=""
    popoverclass=""
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-dropdown-search__search-icon ec-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
           
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
         
        <!---->
         
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--0"
          title="Item 1"
        >
          <div>
            <strong>
              0.
            </strong>
            Item 1
          </div>
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--1"
          title="Item 2"
        >
          <div>
            <strong>
              1.
            </strong>
            Item 2
          </div>
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--2"
          title="Item 3"
        >
          <div>
            <strong>
              2.
            </strong>
            Item 3
          </div>
        </li>
        <li
          class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--3"
          mocked-tooltip-content="Random text"
          mocked-tooltip-placement="right"
          title="Item 4"
        >
          <div>
            <strong>
              3.
            </strong>
            Item 4
          </div>
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--4"
          title="Item 5"
        >
          <div>
            <strong>
              4.
            </strong>
            Item 5
          </div>
        </li>
      </ul>
    </div>
  </ecpopover-stub>
</div>
`;

exports[`EcDropdownSearch should render given items slot 1`] = `
<div
  class="ec-dropdown-search"
>
  <ecpopover-stub
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search"
    level=""
    offset="8"
    placement="bottom"
    popoverarrowclass=""
    popoverclass=""
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-dropdown-search__search-icon ec-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
           
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
         
        <!---->
         
        <li>
          Items: 
          <pre>
            {
  "0": {
    "id": 1,
    "text": "Item 1"
  },
  "1": {
    "id": 2,
    "text": "Item 2"
  },
  "2": {
    "id": 3,
    "text": "Item 3"
  },
  "3": {
    "id": 4,
    "text": "Item 4",
    "disabled": true,
    "disabledReason": "Random text"
  },
  "4": {
    "id": 5,
    "text": "Item 5"
  }
}
          </pre>
        </li>
      </ul>
    </div>
  </ecpopover-stub>
</div>
`;

exports[`EcDropdownSearch should render the search by default 1`] = `
<li
  class="ec-dropdown-search__search-area"
  data-test="ec-dropdown-search__search-area"
>
  <svg
    class="ec-dropdown-search__search-icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-search"
    />
  </svg>
   
  <input
    autocomplete="off"
    class="ec-dropdown-search__search-input"
    data-test="ec-dropdown-search__search-input"
    placeholder="Search..."
  />
</li>
`;

exports[`EcDropdownSearch should use and update the v-model 1`] = `
<li
  class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
  data-test="ec-dropdown-search__item ec-dropdown-search__item--0"
  title="Item 1"
>
  Item 1
</li>
`;

exports[`EcDropdownSearch should use and update the v-model 2`] = `
<li
  class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
  data-test="ec-dropdown-search__item ec-dropdown-search__item--2"
  title="Item 3"
>
  Item 3
</li>
`;

exports[`EcDropdownSearch should use the placeholder for search input if given 1`] = `
<li
  class="ec-dropdown-search__search-area"
  data-test="ec-dropdown-search__search-area"
>
  <svg
    class="ec-dropdown-search__search-icon ec-icon"
  >
    <use
      xlink:href="#ec-simple-search"
    />
  </svg>
   
  <input
    autocomplete="off"
    class="ec-dropdown-search__search-input"
    data-test="ec-dropdown-search__search-input"
    placeholder="Random text"
  />
</li>
`;
